--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script defer src="src/index.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="styles/index.css">
     <title>Weather Report</title>
 </head>
 <body>
@@ -13,9 +15,9 @@
     </header>
     <section class="temperature">
         <h1>Temperature</h1>
-        <div id="up-button">↑</div>
-        <div id="down-button">↓</div>
-        <div id="temp-number"><span id="number">some int</span>° F</div>
+        <button id="up-button">↑</button>
+        <button id="down-button">↓</button>
+        <div id="temp-number" class="orange"><span id="number">some int</span>° F</div>
     </section>
     <section class="sky">
         <h1>Sky</h1>
@@ -24,7 +26,7 @@
     <section class="city-name">
         <h1>City Name</h1>
         <div id="city-text-box"></div>
-        <div id="city-reset-button">Change City</div>
+        <button id="city-reset-button">Change City</button>
     </section>
     <section class="weather-garden">
         <h1>Weather Garden</h1>
