add more conditions for view section

--- a/index.html
+++ b/index.html
@@ -48,8 +48,13 @@
                 <section class="col-8 view-section">
                     <h3>Weather Activity</h3>
                     <div class="view-background">
-                        <div class="sky-emoji emoji"></div>
-                        <div class="activity-emoji emoji"></div>
+                        <div class="sky-background">
+                            <div class="sky-emoji emoji"></div>
+                        </div>
+                        <div class="activity-background">
+                            <img class='activity-img' src='' alt='to-be-inserted'>
+                        </div>
+                        <p class="activity-desc"></p>
                     </div>
                 </section>
             </div>
