All required functionality implemented

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   </head>
   <header>
     <h1 class="landscape">Show Me The Weather</h1>
+    <h2 id="cityHeader">City: Brooklyn</h2>
   </header>
-  <body class="landscape">
+  <body id="landscape">
     <img
       src="assets/sky_photo.jpg"
       alt="A photo of a cloudy sky"
@@ -18,7 +19,7 @@
     />
     <section class="buttonWindow">
       <section id="tempContainer">
-        <label id="tempCount">Temperature: 0</label>
+        <label id="tempCount">Temperature (Farhenheit): 30</label>
         <div>
           <button id="clickButtonIn" >⬆️</button>
           <button id="clickButtonDe">⬇️</button>
@@ -38,13 +39,13 @@
         </div>
       </section>
       <section>
-        <label for="cityName">Enter a City</label>
-        <div>
-          <input type="text" id="cityNameSelect" />
-          <button id="cityNameReset" class="cityName_resetBtn">Reset</button>
-        </div>
-      </section>
-    <section>
+          <label for="cityName">Enter a City</label>
+          <div>
+            <input type="text" id="cityNameSelect" />
+            <button id="cityNameReset" class="cityName_resetBtn">Reset</button>
+          </div>
+        </section>
+    </section>
       <!-- Landscape Photos here -->
 
     </section>
