--- a/index.html
+++ b/index.html
@@ -19,45 +19,44 @@
   <div class="main-container">
     <header>
       <h1 class="logo">Weather Report</h1>
-      <h3 class="sub"> For the lovely city of [city name]</h3>
+      <h3 class="sub"> For the lovely city of</h3>
+      <h2 id="default-city">City Name</h2>
     </header>
     <main>
-      <section class="left-section">
-        <h3>Temperature</h3>
-        <button id="up-arrow">⬆️</button>
-        <br>
-        <button id="down-arrow">⬇️ </button>
-        <div id="temperature">70</div>
-      </section>
-      <section> 
-        <h3>Sky</h3>   
-        <select name="sky" id="sky">
-          <option value="sunny">Sunny</option>
-          <option value="cloudy">Cloudy</option>
-          <option value="rainy">Rainy</option>
-          <option value="snowy">Snowy</option>
-        </select>
-        <section> 
+      <div id="widget-container">
+        <section class="temperature-section">
+          <h3>Temperature</h3>
+          <button id="up-arrow">⬆️</button>
+          <button id="down-arrow">⬇️ </button>
+          <div id="temperature">70</div>
+        </section>
+        <section class="sky-section"> 
+          <h3>Sky</h3>   
+          <select name="sky" id="sky">
+            <option value="sunny">Sunny</option>
+            <option value="cloudy">Cloudy</option>
+            <option value="rainy">Rainy</option>
+            <option value="snowy">Snowy</option>
+          </select>
+        </section> 
+        <section class="city-section"> 
           <h3>City Name</h3> 
-          <input type="text">
-          <input type="reset" value="Reset">    
-          </section> 
-      </section>  
+          <input type="text" id="city-name" placeholder="City name"/>
+          <input type="reset" id ="reset-button" value="Reset">    
+        </section> 
+      </div>
       <section class="weather-garden">
         <h2>Weather Garden</h2>
+        <div class="weather-box">
         <div id="sky-emojis">☁️ ☁️ ☁️ ☀️ ☁️ ☁️</div>
-        <br>
         <div id="ground-emojis">🌸🌿🌼__🌷🌻🌿_☘️🌱_🌻🌷</div>
+        </div>
       </section>
-      
     </main>
     <footer>©Lizet Tovar</footer>
   </div>
   <!-- place scrpt tag here before end of body. Can have more than 1. Looks kinda like: -->
-  <script src="src/index.js" type="text/javascript"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="src/index.js"></script>
 </body>
 </html>
 
