--- a/index.html
+++ b/index.html
@@ -9,24 +9,27 @@
 </head>
 <body>
     <h1>Weather Report</h1>
-    <span class="cityName"></span>
+    <span class="cityName">Terre Haute</span>
     <section class="box" id="cityNameBox">
         <h2 id="changeCity">Change City</h2>
         <input type="text" value = "Terre Haute">
         <button>Reset</button> 
     </section>
-    
     <section class="picture" id="tempLandscape">
+        <img id="tempPic" src="assets/60-79.jpg" alt="Purple flowers growing our of dried leaves">
     </section>
     <section class="picture" id="skyPicture">
     </section>
-    <section class="tempBox box">
+    <section class="box" id="tempBox">
         <h2 id="tempHeading">Temperature</h2>
-        <span id="temp">75 &#8457;</span>
+        <span id="tempDisplay">
+            <text id="temp">75</text>
+            <text>&#8457;</text>
+        </span>
         <span class="changeTemp" id="increaseTemp">&#8593;</span>
         <span class="changeTemp" id="decreaseTemp">&#8595;</span>
     </section>
-    <section class="skyBox box">
+    <section class="box" id="skyBox">
         <h2>Sky</h2>
         <select>
             <option>Sunny</option>
@@ -36,5 +39,6 @@
             <option>Firenado</option>
         </select>
     </section>
+    <script src="src/index.js" type="text/javascript"></script>
 </body>
 </html>
