modify locationControl behavior

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header>
             <div class="header-container">
                 <h1 class="header-text">
-                    Weather Report of <span id="location">Hometown</span>
+                    Weather Report of <span id="location"></span>
                 </h1>
             </div>
         </header>
@@ -41,7 +41,7 @@
                         <h3>Location</h3>
                         <form action="">
                             <input id="location-input" type="text">
-                            <button class="submit" type="submit">Change</button>
+                            <button class="submit" type="submit">Reset</button>
                         </form>
                     </section>
                 </section>
