--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/index.css">
     <title>Weather Report</title>
 </head>
 <body>
-    
+    <main> 
+        <header > El Clima </header>
+        <aside>
+            <section class="box" id="temperature">
+                <h3 >Choose your outfit</h3> 
+                <button class="itsHot">It's getting hot in herrrrre</button>
+                <button class="itsCold">Sweather Weather</button>
+            </section>
+            <section class="box">
+                <h3 >Where in the world?</h3>
+            </section>
+            <section class="box">
+                <h3 >Hope this Dog improves your day</h3>
+            </section>
+        </aside>
+        <section id="closet">
+            <h3 >The Closet</h3>
+        </section>
+        
+    </main>
+    <script src="src/index.js"></script>
 </body>
 </html>
