Css changes for visual apeal, max and min temperature constraints in index.js

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <button  class="up-button" id="weather-up">⬆️</button>
                 <button  class="down-button" id="weather-down">⬇️</button>
                 </div>
-                <input class="temperature-digit" id="temperature" value="35" readonly></input><h4>C°</h4></div>
+                <input class="temperature-digit" id="temperature" value="35" readonly></input><h4>F°</h4></div>
         </section>
     
     <section class="sky-selection-section">
@@ -48,9 +48,9 @@
         <h2>WEATHER GARDEN</h2>
         <div class="weather-landscape">
         <div id="sky">🌧🌈⛈🌧🌧💧⛈🌧🌦🌧💧🌧🌧</div>
-        <br><br><br><br>
-        <div id="earth">🌸🌿🌼__🌷🌻🌿_☘️🌱_🌻🌷</div>
-        </div></section>
+        <div id= "earth-landscape">
+        <div id="earth">🌸🌿🌼 🌷🌻🌿 ☘️🌱 🌻🌷</div>
+        </div></div></section>
         <script src="./src/index.js">
         </script>
     </body>
