oninput working for city name

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="stylesheets/index.css">
-    <title>Weather Report</title>
+    <title>Sabrina's Weather Report</title>
 </head>
 <body>
     <header class="header_class">
     <h1>Weather Report</h1>
     <span>For the City of
-    <span class="header_city">New York</span>
+    <span class="header_city" id ="header_city_id">New York</span>
     </span></header>
-    <section class="temperature_section"></section>
+    <section class="temperature_section">
     <h2>Temperature</h2>
     <div class="temperature_body">
         <div class="temperature_clickables">
@@ -24,6 +24,7 @@
             38 
         </span>
     </div>
+    </section>
     <section class="sky_section">
         <h2>Sky</h2>
         <label for="city-select">Select a Sky:</label>
@@ -38,8 +39,8 @@
     <section class="landscape_section">
         <h2>Landscape</h2>
         <div id="landscapeContent" class="???">
-            <div id="sky">????</div>
-            <div id="landscape">???</div>
+            <div id="sky">🌨❄️🌨🌨❄️❄️🌨❄️🌨❄️❄️🌨🌨</div>
+            <div id="landscape">🌲🌲⛄️🌲⛄️🍂🌲🍁🌲🌲⛄️🍂🌲</div>
         </div>
     </section>
     <section class="city_selection_section">
