worked on increaseTemp() and decreaseTemp()

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@ commit 5 - final commit
         <h1 id='h1'>Bay Area</h1>
         <section>
             <h2>Temperature</h2>
-            <button class='increase'>Up</button>
-            <button class='decrease'>Down</button>
-            <span id='temperature'>40&deg;F</span>
+            <button id='up'>Up</button>
+            <button id='down'>Down</button>
+            <span id='temperature'>40</span>
         </section>
         <section>
             <h2>Outside Condition</h2>
@@ -36,8 +36,8 @@ commit 5 - final commit
         </section>
         <section>
             <h2>Location</h2>
-            <input type='text' placeholder='Rep your city' id='city'></input>
-            <button>Reset</button>
+            <input type='text' placeholder='Rep your city' id='city-text'></input>
+            <button id='city-button'>Reset</button>
         </section>
     </main>
     <script src='/src/index.js'></script>
