--- a/index.html
+++ b/index.html
@@ -13,14 +13,10 @@
     </header>
     <section>
         <h1>
-            Welcome to the beautiful 
-            <p id="city">
-                San Antonio
-            </p>
+            Welcome to My World 
+            <p id="city">San Antonio</p>
             <input type="text" id="typeCityName" value="San Antonio">
-            <button id="reset" type="reset">
-                Reset
-            </button>
+            <button id="reset" type="reset">Reset</button>
         </h1>
     </section>
     <section id="weatherContainer">
@@ -35,7 +31,7 @@
         </div>
         <section id="buffer"></section>
         <div id="weatherSky">
-            <label>How is the weather today?</label>
+            <label>How is the weather?</label>
             <select id="changeSky">
                 <option id="plainSky" selected>Today the sky looks...</option>
                 <option id="clearSky">Clear as Can Be</option>
@@ -46,8 +42,6 @@
         </div>
         <div id="weatherLand"></div>
     </section>
-    <script src="src/index.js">
-        
-    </script>
+    <script src="src/index.js"></script>
 </body>
 </html>
