reset working on city input field

--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
         </div>
     </section>
     <section class="city_selection_section">
-        <h2>City Name</h2>
+        <h2>Change City</h2>
+        <label for="city">New City:</label>
         <input id="cityNameInput" type="text" value="New York">
-        <button id="cityNameReset" class="city_name_reset_button">Reset</button>
+        <input id = "cityNameReset" class= "city_name_reset_button" type = "button" onclick="resetButton()" value="Reset">
     </section>
     <script src="scripts/index.js"></script>
 </body>
