--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <section class="data__section">
         <section class="data__temp">
             <h2>Temperature</h2>
+            <span id="decrease">⬇</span>
+            <span id="temp"></span>
+            <span id="increase">⬆</span>
         </section>
         <section class="data__sky">
             <h2>Sky</h2>
@@ -43,5 +46,7 @@
         </div>
         <div id="garden"></div>
     </section>
+
+    <script type="text/javascript" src="src/index.js"></script>
 </body>
 </html>
