added functionality to city name and displayed garden

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1>Weather Report</h1>
         </div>
         <div id="city" class="header__section">
-            <h1>San Francisco</h1>
+            <h1 id="display__city">San Francisco</h1>
         </div>
     </header>
 
@@ -35,6 +35,8 @@
         </section>
         <section class="data__city">
             <h2>City Name</h2>
+            <input type="text" id="new__city">
+            <button id="reset">Reset</button> 
         </section>
     </section>
 
