assigned color to temperature number and sky color

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <section class="data__section">
         <section class="data__temp">
             <h2>Temperature</h2>
-            <span id="decrease">⬇</span>
+            <span class ="arrow" id="decrease">⬇</span>
             <span id="temp"></span>
-            <span id="increase">⬆</span>
+            <span class="arrow" id="increase">⬆</span>
         </section>
         <section class="data__sky">
             <h2>Sky</h2>
