--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p class="cityInfo">for <span id="cityName">Terre Haute</span></p>
     <section class="box" id="cityNameBox">
         <h2 id="changeCity">Change City</h2>
-        <input type="text" value = "Terre Haute">
+        <input id="cityInput" type="text" value = "Terre Haute">
         <button>Reset</button> 
     </section>
     <img class="picture" id="tempPic" src="assets/60-79.jpg" alt="Purple flowers growing our of dried leaves">
