adds reset of header city

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h2>Change City</h2>
         <label for="city">New City:</label>
         <input id="cityNameInput" type="text" value="New York">
-        <input id = "cityNameReset" class= "city_name_reset_button" type = "button" onclick="resetButton()" value="Reset">
+        <button id="cityNameReset" class="city_name_reset_button" onclick="resetButton(), resetHeaderCityToDefault()">Reset</button>
     </section>
     <script src="scripts/index.js"></script>
 </body>
