--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="box" id="cityNameBox">
         <h2 id="changeCity">Change City</h2>
         <input id="cityInput" type="text" value = "Terre Haute">
-        <button>Reset</button> 
+        <button id="reset">Reset</button> 
     </section>
     <img class="picture" id="tempPic" src="assets/60-79.jpg" alt="Purple flowers growing our of dried leaves">
     <img class="picture" id="skyPic" src="assets/sunny.jpg" alt="Sun shinning through trees with orange, green, and yellow foliage">
