html and javascript

--- a/index.html
+++ b/index.html
@@ -5,8 +5,62 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Report</title>
+    <link rel="stylesheet" href="styles/index.css">
 </head>
+
 <body>
+    <header>
+        <h4>What's up with the weather in...?</h4>
+    </header>
     
+    <section id="locationInput">
+        <h4>where you at?</h4>
+        <input id="cityNameInput" type="text" value="Seattle">
+        <button id="resetCityName">Reset City</button>
+    </section>
+
+    <section id="temperatureInput">
+        <h2>whats the temp?</h2>
+        <button id="tempUp">up</button>
+        <button id="tempDown">down</button>
+    </section>
+
+    <section id="weatherMenu">
+        <h4>what's the sky like?</h4>
+        <select id="skyInput">
+            <option value="Empty"></option>
+            <option value="Sunny">Sunny</option>
+            <option value="Cloudy">Cloudy</option>
+            <option value="Rainy">Rainy</option>
+            <option value="Snowy">Snowy</option>
+        </select>
+    </section>
+
+    <section id="cityContainer">
+        <div><span id="cityName">Seattle</span>
+        </div>
+        <h4 id="currentTemp">Current Temp</h4>
+        <h3 id="tempValue" class="orange">71 °F</h3>
+    </section>
+
+    <section id="landscapeContainer">
+        <h2>out in the wild</h2>
+        <div id="landscapeContent" class="weather_content sunny">
+            <div id="sky">
+                🌧🌈⛈🌧🌧💧⛈🌧🌦🌧💧🌧🌧
+            </div>
+            <div id="landscape">
+                🌸🌿🌼__🌷🌻🌿_☘️🌱_🌻🌷
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <p>Copyright &copy; 2021 | Jesse Pope</p>
+    </footer>
+
+	<script src="src/index.js">
+	</script>
+
 </body>
 </html>
