adds LIVE VIEW button for santa monica. beta version.....

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SoCal Weather Report</title>
+    <link rel="stylesheet" href="styles/index.css" />
 </head>
 <body>
-    <section>
+    <section id="titleZone">
         <h1>☀️<span id="locationTitle">SoCal</span> Weather🌬 Report🌦</h1>
     </section>
 
@@ -28,12 +29,17 @@
         <button id="hotterButton">hotter</button>
     </section>
 
-    <section id="landscape">
-        <h2>put landscape here</h2>
+    <section id="landscapeZone">
+        <section id="landscapeDisplay">
+            (landscape here)
+        </section>
     </section>
+
+
+    <button id="viewLiveButton">view landscape LIVE!</button>
+    <br>
     <!-- <section id="liveView">
-        <button>view landscape LIVE!</button>
-        <br>
+
         <iframe width="560" height="315" src="https://www.youtube.com/embed/OWbI6WtlI-k?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     
         <iframe width="560" height="315" src="https://www.youtube.com/embed/zOfBhttA3Dk?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
