made changes to text sizing

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <main class="main-container">
         <header>
             <h1>Weather Report From the City of Your Choice</h1>
-            <p>Currently showing the weather in:</p>
+            <h4>Currently showing the weather in:</h4>
             <p id="city-header">Catalina Island</p>
         </header>
         <section class="temp-container">
             <h3>Temperature</h3>
             <div class="temp-controls">
-                <h5>Increase or Decrease the Temperature:</h5>
+                <h4>Increase or Decrease the Temperature:</h4>
                 <span class="orange" id="temp-display">70</span>
                 <div>
                 <button id="increase-temp">Increase</button>
@@ -26,7 +26,7 @@
             </div>
         </section>
         <section class="garden-container">
-            <h3>Weather Garden</h3>
+            <h2>Weather Garden</h2>
             <div id="garden-container">
                 <div id="sky-garden">☀️ ☀️ ☀️ ☀️ ☀️ ☀️ ☀️</div>
                 <div id="landscape">🌸🌿🌼__🌷🌻🌿_☘️🌱_🌻🌷</div>
@@ -34,7 +34,7 @@
         </section>
         <section class="sky-container">
             <h3>Sky</h3>
-            <h5>Choose the Sky Conditions:</h5>
+            <h4>Choose the Sky Conditions:</h4>
             <select id="sky-dropdown">
                 <option>Sunny</option>
                 <option>Cloudy</option>
@@ -48,7 +48,7 @@
             <input type="text" id="city-input" value="Catalina Island"/>
         </section>
         <section class="reset">
-            <h4>Reset City:</h4>
+            <h3>Reset City:</h3>
         <button id="city-reset">Reset</button>
         </section>
     </main>
