added landscape images

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
 
     <section class="weather-landscape border border-warning">
         <h2 class= "label">Weather Landscape</h2>
-        <p id= "landscape">🌾🪨🍁🍃🪨🍃🍂🍃💨🍁🍃🍂🏠💨🌲</p>
+        <img id= "sky-img-1" src="https://64.media.tumblr.com/0d64589f9007cc152174260fa7940543/tumblr_myd7lbOUFp1r9mp00o9_400.jpg" alt= "A yellow crescent moon with purple stars">
+        <img id= "sky-img-2" src="https://64.media.tumblr.com/2dac3b04d52ef531c85373e878d7e862/tumblr_myd7lbOUFp1r9mp00o8_400.jpg" alt= "Purple clouds raining">
+        <p id= "landscape">🍁🍃💨🪨🍃🍂🍃💨🍁🍃🪨🍂🏠💨🌲</p>
     </section>
     <script type="text/javascript "src="src/index.js"></script>
 </body>
