--- a/index.html
+++ b/index.html
@@ -25,4 +25,13 @@
                 <span id="tempValue"></span>
             </div>
         </section>
+        <section class="sky_section">
+            <h2 id= "skyTitle" >Sky</h2>
+            <select id="skySelect">
+                <option>Sunny</option>
+                <option>Cloudy</option>
+                <option>Rainy</option>
+                <option>Snowy</option>
+            </select>
+        </section>
 </html>
