--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section id="title" class="card">
         <h1 id="title-text" class="text">Weather Report</h1>
     </section>
-    <section id="sky-display" class="card">Placeholder: Image of a sky</section>
+    <section id="sky-display" class="card"></section>
     <section id="city-display" class="card">
         <h3 class="text">Coming to you live from</h3>
     </section>
@@ -29,6 +29,12 @@
     </section>
     <section id="sky-select-block" class="card">
         <h2 class="text">Choose your sky:</h2>
+        <select id= "sky-selector" name="skies">
+            <option>Sunny</option>
+            <option>Cloudy</option>
+            <option>Rainy</option>
+            <option>Snowy</option>
+        </select>
     </section>
     <section id="landscape-block" class="card"></section>
     <script src="src/index.js" type="text/javascript"></script>
