--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header_section">
         <h1>Weather Report</h1>
         <span class="subheader">
-            <span id="headerCityName" class="header_city">For the lovely city of Seattle</span>
+            <span id="headerCityName" class="header_city"></span>
         </span>
     </header>
     <div class="user_events">
@@ -34,4 +34,10 @@
                 <option>Snowy</option>
             </select>
         </section>
+        <section class="city_section">
+            <h2 id="cityTitle">City Name</h2>
+            <input type="text" id="cityNameInput" value="✨Seattle✨" />
+            <button id="cityNameReset" class="resetButton">Reset</button>
+        </section>
+    </div>
 </html>
