adds city input, reset button, and display

--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
         <h1 id="title-text" class="text">Weather Report</h1>
     </section>
     <section id="sky-display" class="card"></section>
-    <section id="city-display" class="card">
-        <h3 class="text">Coming to you live from</h3>
+    <section id="city-block" class="card">
+        <h2 class="text">Coming to you live from</h2>
+        <p id="city-display" class="text">Benicia, CA</p>
     </section>
     <section id="city-input-block" class="card">
         <h2 class="text">Where ya at?</h2>
+        <input id="city-input" value="Benicia, CA">
         <button id="city-reset">Reset</button>
     </section>
     <section id="temperature-block" class="card">
