adds images to represent location and weather

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <section id="locationsZone">
         <select name="locations" id="locations">
             <optgroup label="SoCal Locations">
-                <option id="santa monica">Santa Monica</option>
+                <!-- <option id="santa monica">Santa Monica</option> -->
+                <option id="first_option" value="" disabled selected hidden>select a location...</option>
+                <option id="muscle_beach">Muscle Beach</option>
                 <option id="disneyland">Disneyland</option>
                 <option id="lax">LAX</option>
             </optgroup>
@@ -29,14 +31,37 @@
         <button id="hotterButton">hotter</button>
     </section>
 
+    <section id="skysZone">
+        <select name="skys" id="skys">
+            <optgroup label="Glorious Skies">
+                <option id="sunny">sunny</option>
+                <option id="stormy">cloudy</option>
+                <option id="windy">windy</option>
+            </optgroup>
+        </select>
+    </section>
+
     <section id="landscapeZone">
         <section id="landscapeDisplay">
-            (landscape here)
+            <section id="landmark">
+                <img src="assets/left_palm.gif" id="left_palm">
+                <img src="assets/AngelyneNFT.gif" id="angelyne">
+                <img src="assets/right_palms.gif" id="left_palm">
+                <!-- <img src="assets/muscle_beach.gif" id="muscle_beach"> -->
+                <!-- <img src="assets/lax_plane.png" id="lax_plane"> -->
+                <!-- <img src="assets/mickey.gif" id="mickey"> -->
+            </section>
+            <section id="cloud">
+                <img src="assets/sunny_cloud.gif" alt="white cloud with smiling face softly bobs a bit" id="sunny_cloud">
+                <!-- <img src="assets/stormy_cloud.gif" alt="dark grey and blue cloud with devious facial expression rains down water and lightning" id="stormy_cloud"> -->
+                <!-- <img src="assets/windy_cloud.gif" alt="white cloud with smiling face softly bobs a bit" id="windy_cloud"> -->
+            </section>
+
         </section>
     </section>
 
 
-    <button id="viewLiveButton">view landscape LIVE!</button>
+    <button id="viewLiveButton">View LIVE!</button>
     <br>
     <!-- <section id="liveView">
 
