--- a/index.html
+++ b/index.html
@@ -13,31 +13,35 @@ commit 5 - final commit
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Report</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel='stylesheet' href='/styles/index.css'>
 </head>
 <body>
-    <main>
-        <h1 id='h1'>Bay Area</h1>
+    <div class='overlay sunny'> </div>
+    <div class='overlay cloudy'></div>
+    <div class='overlay rainy'></div>
+    <main class='container'>
+        <h1 id='h1'>Yay Area</h1>
         <section>
-            <h2>Temperature</h2>
-            <button id='up'>Up</button>
-            <button id='down'>Down</button>
+            <h2>Temperature (&deg;F)</h2>
+            <button id='up' class="btn btn-outline-dark btn-sm">Up</button>
+            <button id='down' class="btn btn-outline-dark btn-sm">Down</button>
             <span id='temperature'>40</span>
         </section>
         <section>
-            <h2>Outside Condition</h2>
+            <h2>Sky</h2>
             <label for='weather'></label>
-            <select name='weather'>
+            <select name='weather' id='sky-menu'>
                 <option value='null'></option>
-                <option value='Sunny'>Sunny</option>
-                <option value='Cloudy'>Cloudy</option>
-                <option value='Rainy'>Rainy</option>
+                <option value='Sunny' id='sunny'>Sunny</option>
+                <option value='Cloudy' id='cloudy'>Cloudy</option>
+                <option value='Rainy' id='rainy'>Rainy</option>
             </select>
         </section>
         <section>
             <h2>Location</h2>
             <input type='text' placeholder='Rep your city' id='city-text'></input>
-            <button id='city-button'>Reset</button>
+            <button type='reset' id='city-button' class="btn btn-outline-dark btn-sm">Reset</button>
         </section>
     </main>
     <script src='/src/index.js'></script>
