--- a/index.html
+++ b/index.html
@@ -40,4 +40,13 @@
             <button id="cityNameReset" class="resetButton">Reset</button>
         </section>
     </div>
+    <section class="garden_section">
+        <h2 id="gardenTitle">Weather Garden</h2>
+        <div id="gardenContent" class="garden_content">
+            <div id="sky"></div>
+            <div id="landscape"></div>
+        </div>
+    </section>
+    <script src="scripts/index.js" ></script>
+</body>
 </html>
