--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="styles/index.css" rel="stylesheet" type="text/css"/>
     <title>Weather Report</title>
 </head>
 <body>
+    <div class="container">
+        <div class="box1">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+        </div>
+        <div class="box2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam iure odit eos praesentium, cumque quo, quia totam provident fuga deleniti nemo, a magnam aperiam necessitatibus maiores itaque. Eveniet, perspiciatis adipisci.
+
+        </div>
+        <div class="box3">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+        </div>
+        <div class="box4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam iure odit eos praesentium, cumque quo, quia totam provident fuga deleniti nemo, a magnam aperiam necessitatibus maiores itaque. Eveniet, perspiciatis adipisci.
+
+        </div>
+        <div class="box5">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+        </div>
+        <div class="box6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam iure odit eos praesentium, cumque quo, quia totam provident fuga deleniti nemo, a magnam aperiam necessitatibus maiores itaque. Eveniet, perspiciatis adipisci.
+
+        </div>
+    </div> 
     
 </body>
 </html>
