index.html tags added, js file created

--- a/index.html
+++ b/index.html
@@ -4,9 +4,87 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather Report</title>
+    <title>Biome-Mania</title>
 </head>
 <body>
-    
+  <header>
+    <h1>
+      Biome-Mania
+      <span id="tagline">
+        Weather or not!
+      </span>
+    </h1>
+  </header>
+  <section class="controls" id="temp_controls">
+    <h2>
+      Temperature
+    </h2>
+    <section class="control_content id="tempt_content">
+      <span id="temp_chart">
+
+      </span>
+      <span id="temp_value">
+
+      </span>
+      <span class="button" id="temp_increase">
+        # up
+      </span>
+      <span id="tempdecrease" class="button">
+        # down
+      </span>
+    </section>
+
+  </section>
+  <section class="controls" id="weathercontrols">
+    <h2>
+      Weather
+    </h2>
+    <section class="controlcontent id="weathercontent">
+      <span class="arrow" id="weather_left">
+        # left
+      </span>
+      <img href=""> </img>
+      <span class="arrow" id="weather_right">
+        # right
+      </span>
+    </section>
+  </section>
+  <section class="controls" id="ecocontrols">
+    <h2>
+      Ecosystem
+    </h2>
+    <h3>
+      <span id="ecodescription">
+
+      </span>
+    </h3>
+
+  </section>
+  <section class="cityside">
+    <section class="city">
+      <h3 id="cityonename"></h3>
+      <span class="button" id="cityoneresetname">
+        # (X)
+      </span>
+      <section class="environment" id="cityoneenvironment">
+        <div class="sky" id="cityonesky">
+        </div>
+        <div class="weather" id="cityoneweather">
+        </div>
+        <div class="plants" id="cityoneplants">
+        </div>
+        <div class="animals" id="cityoneanimals">
+        </div>
+      </section>
+      <h4>
+        <span class="button" id="cityoneresetenvironment">
+        </span>
+        reset
+      </h4>
+
+    </section>
+
+  </section>
+
 </body>
 </html>
