--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="styles/index.css" />
   </head>
   <header>
-    <h1 class="landscape">Show Me The Weather</h1>
-    <h2 id="cityHeader">City: Brooklyn</h2>
+    <h1 class="accentColors">Show Me The Weather</h1>
+    <h2 class="accentColors">City: Brooklyn</h2>
   </header>
-  <body id="landscape">
+  <body id="landscape" id="container">
     <img
       src="assets/sky_photo.jpg"
       alt="A photo of a cloudy sky"
@@ -19,13 +19,13 @@
     />
     <section class="buttonWindow">
       <section id="tempContainer">
-        <label id="tempCount">Temperature (Farhenheit): 30</label>
+        <label id="tempCount">Temperature (Farhenheit): 40</label>
         <div>
           <button id="clickButtonIn">⬆️</button>
           <button id="clickButtonDe">⬇️</button>
         </div>
       </section>
-      <section>
+      <section class="accentColors">
         <label for="skySelect">Select a Sky View</label>
         <div>
           <select name="sky" id="skySelect">
@@ -38,11 +38,11 @@
           </select>
         </div>
       </section>
-      <section>
+      <section class="accentColors">
           <label for="cityName">Enter a City</label>
           <div>
             <input type="text" id="cityNameSelect" />
-            <button id="cityNameReset" class="cityName_resetBtn">Reset</button>
+            <button id="cityNameReset">Reset</button>
           </div>
         </section>
     </section>
@@ -59,4 +59,7 @@
     </section>
     <script src="src/index.js"></script>
   </body>
+  <footer class="footer">
+
+  </footer>
 </html>
